@@ -1,3 +1,4 @@
+1.3.6-0 @09/26/2007 19:50:00 UTC@
 1.3.5-0 @09/25/2007 21:35:00 UTC@
 1.3.4-0 @09/25/2007 21:30:00 UTC@
 1.3.3-0 @09/05/2007 03:00:00 UTC@
