@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Sep-26-2007 patrick     Added snx::sonix::shutdownAPI() so that user-level code
+                        can control when the sound API is closed rather than
+                        having it happen only in the snx::sonix destructor.
+                        NEW VERSION: 1.3.6
 Sep-25-2007 patrick     Changed method signatures to remove passing of
                         fundamental types by const reference.
                         NEW VERSION: 1.3.5
